# MineBoard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
front/: index.html  package-lock.json  package.json
front/src/: App.tsx  Ws.tsx  index.css
src/: broadcaster.rs  main.rs  messages.rs
src/server/: mod.rs
src/websocket/: mod.rs
